sumo/tests/sumo/errors/testsuite.sumo
# Ordered list of tests in test suite. Add as appropriate


# Tests what happens if an unknown option is passed
unknown_option




